poll.deployment.yaml
##
## EPITECH PROJECT, 2025
## G-DOP-500-COT-5-1-bernstein-4
## File description:
## poll.deployment.yaml
##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll-deployment 
  namespace: default
  labels:
    app: poll 

spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll

    spec:
      containers:
        - name: poll-app
          image: epitechcontent/t-dop-600-poll:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128M" #Limite de mémoire
      restartPolicy: Always
