postgres.deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bernestein-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bernestein-postgres
  template:
    metadata:
      labels:
        app: bernestein-postgres
    spec:
      containers:
        - name: bernestein-postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: bernestein-pvc
