result.deployment.yaml
##
## EPITECH PROJECT, 2025
## G-DOP-500-COT-5-1-bernstein-4
## File description:
## result.deployment.yaml
##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  namespace: default
  labels:
    app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result-app
          image: epitechcontent/t-dop-600-result:k8s
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "128M"
      restartPolicy: Always
