worker.deployment.yaml
##
## EPITECH PROJECT, 2025
## G-DOP-500-COT-5-1-bernstein-4
## File description:
## worker.deployment.yaml
##

apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker

spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker

template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker-app
          image: epitechcontent/t-dop-600-worker:k8s
          resources:
            limits:
              memory: "256M"
      restartPolicy: Always
