postgres.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bernestein-postgres
spec:
  ports:
    - port: 5432
  selector:
    app: bernestein-postgres
