traefik.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-public
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30021
    - name: admin
      port: 8080
      targetPort: 8080
      nodePort: 30042
